refactor: deixa os endpoints de documentos enxutos e limpos
Refactor/rotas documento
