# src/models/documento-versao.model.js
@@ -1,59 +1,42 @@
 import knex from '../config/database.js';
 
-export async function criar({ conteudo, criadorId, documentoId, projetoId, categoriaId }) {
+export async function criar({ conteudo, criadorId, documentoId }) {
   const [resultado] = await knex.raw(
     `
     INSERT INTO documento_versao (conteudo, criador_id, documento_id)
-    SELECT ?, ?, d.id
-    FROM documento AS d
-    JOIN categoria AS c
-      ON c.id = d.categoria_id
-    WHERE d.id = ?
-      AND d.deletado_em IS NULL
-      AND c.id = ?
-      AND c.projeto_id = ?
+    VALUES (?, ?, ?)
     `,
-    [conteudo, criadorId, documentoId, categoriaId, projetoId],
+    [conteudo, criadorId, documentoId],
   );
 
   return resultado; // Contém affectedRows e insertId
 }
 
-export async function obterVersoesPorDocumentoId({ documentoId, projetoId, categoriaId }) {
+export async function obterVersoesPorDocumentoId(documentoId) {
   const [resultado] = await knex.raw(
     `
     SELECT dv.id, dv.criado_em FROM documento_versao AS dv
     JOIN documento AS d
       ON d.id = dv.documento_id
-    JOIN categoria AS c
-      ON c.id = d.categoria_id
     WHERE d.id = ?
-      AND d.deletado_em IS NULL
-      AND c.id = ?
-      AND c.projeto_id = ?
     ORDER BY dv.criado_em DESC
     `,
-    [documentoId, categoriaId, projetoId],
+    [documentoId],
   );
 
   return resultado;
 }
 
-export async function obterPorId({ documentoId, projetoId, categoriaId, versaoId }) {
+export async function obterPorId(versaoId) {
   const [resultado] = await knex.raw(
     `
     SELECT dv.id, dv.conteudo, dv.criado_em, d.titulo
     FROM documento_versao AS dv
     JOIN documento AS d
       ON d.id = dv.documento_id
-    JOIN categoria AS c
-      ON c.id = d.categoria_id
     WHERE dv.id = ?
-      AND d.id = ?
-      AND c.id = ?
-      AND c.projeto_id = ?
     `,
-    [versaoId, documentoId, categoriaId, projetoId],
+    [versaoId],
   );
 
   const [documento] = resultado;
