# src/routes/documento.router.js
@@ -1,138 +1,136 @@
 import { Router } from 'express';
 import * as documentoController from '../controllers/documento.controller.js';
 import { verificarSeRequestTemBody } from '../middlewares/request-body.js';
-import { validarToken, validarPermissao, validarAcessoPorProjetoId } from '../middlewares/auth.js';
+import {
+  validarToken,
+  validarPermissao,
+  validarAcessoPorProjetoId,
+  validarAcessoPorCategoriaId,
+  validarAcessoPorDocumentoId,
+  validarAcessoPorDocumentoVersaoId,
+} from '../middlewares/auth.js';
 
 const router = Router();
 
-router.get('/projeto/:projetoId/categorias/documentos', validarToken, async (req, res) => {
-  const { projetoId } = req.params;
+router.get(
+  '/projeto/:projetoId/categorias/documentos',
+  validarToken,
+  validarAcessoPorProjetoId,
+  async (req, res) => {
+    const { projetoId } = req.params;
 
-  const documentos = await documentoController.obterDocumentosDeCadaCategoria(
-    projetoId,
-    req.usuario.id,
-  );
+    const documentos = await documentoController.obterDocumentosDeCadaCategoria(
+      projetoId,
+      req.usuario.id,
+    );
 
-  res.status(200).json(documentos);
-});
+    res.status(200).json(documentos);
+  },
+);
 
 router.post(
-  '/projeto/:projetoId/categoria/:categoriaId/documento',
+  '/categoria/:categoriaId/documento',
   validarToken,
   verificarSeRequestTemBody,
-  validarAcessoPorProjetoId,
+  validarAcessoPorCategoriaId,
   validarPermissao([1, 2]),
   async (req, res) => {
-    const { categoriaId, projetoId } = req.params;
+    const { categoriaId } = req.params;
 
-    await documentoController.criarDocumento(req.body, projetoId, categoriaId);
+    await documentoController.criarDocumento({
+      categoriaIdParam: categoriaId,
+      requestBody: req.body,
+    });
 
     res.sendStatus(201);
   },
 );
 
 router.get(
-  '/projeto/:projetoId/categoria/:categoriaId/documento/:documentoId',
+  '/documento/:documentoId',
   validarToken,
-  validarAcessoPorProjetoId,
+  validarAcessoPorDocumentoId,
   async (req, res) => {
-    const { categoriaId, documentoId, projetoId } = req.params;
+    const { documentoId } = req.params;
 
-    const documento = await documentoController.obterDetalhesDeDocumento(
-      documentoId,
-      categoriaId,
-      projetoId,
-    );
+    const documento = await documentoController.obterDetalhesDeDocumento(documentoId);
 
     res.status(200).json(documento);
   },
 );
 
 router.delete(
-  '/projeto/:projetoId/categoria/:categoriaId/documento/:documentoId',
+  '/documento/:documentoId',
   validarToken,
-  validarAcessoPorProjetoId,
+  validarAcessoPorDocumentoId,
   validarPermissao([1, 2]),
   async (req, res) => {
-    const { categoriaId, documentoId, projetoId } = req.params;
+    const { documentoId } = req.params;
 
-    await documentoController.desativarDocumento(documentoId, categoriaId, projetoId);
+    await documentoController.desativarDocumento(documentoId);
 
     res.sendStatus(204);
   },
 );
 
 router.patch(
-  '/projeto/:projetoId/categoria/:categoriaId/documento/:documentoId/titulo',
+  '/documento/:documentoId/titulo',
   validarToken,
   verificarSeRequestTemBody,
-  validarAcessoPorProjetoId,
+  validarAcessoPorDocumentoId,
   validarPermissao([1, 2]),
   async (req, res) => {
-    const { categoriaId, documentoId, projetoId } = req.params;
+    const { documentoId } = req.params;
 
-    await documentoController.atualizarTituloDeDocumento(
-      req.body,
-      documentoId,
-      categoriaId,
-      projetoId,
-    );
+    await documentoController.atualizarTituloDeDocumento({
+      documentoIdParam: documentoId,
+      requestBody: req.body,
+    });
 
     res.sendStatus(204);
   },
 );
 
 router.post(
-  '/projeto/:projetoId/categoria/:categoriaId/documento/:documentoId/conteudo',
+  '/documento/:documentoId/conteudo',
   validarToken,
   verificarSeRequestTemBody,
-  validarAcessoPorProjetoId,
+  validarAcessoPorDocumentoId,
   validarPermissao([1, 2]),
   async (req, res) => {
-    const { categoriaId, documentoId, projetoId } = req.params;
+    const { documentoId } = req.params;
 
-    await documentoController.criarNovaVersao(
-      req.body,
-      documentoId,
-      categoriaId,
-      projetoId,
-      req.usuario.id,
-    );
+    await documentoController.criarNovaVersao({
+      documentoIdParam: documentoId,
+      requestBody: req.body,
+      usuarioId: req.usuario.id,
+    });
 
     res.sendStatus(201);
   },
 );
 
 router.get(
-  '/projeto/:projetoId/categoria/:categoriaId/documento/:documentoId/historico',
+  '/documento/:documentoId/versoes',
   validarToken,
-  validarAcessoPorProjetoId,
+  validarAcessoPorDocumentoId,
   async (req, res) => {
-    const { categoriaId, documentoId, projetoId } = req.params;
+    const { documentoId } = req.params;
 
-    const historico = await documentoController.obterHistoricoDeVersoes(
-      documentoId,
-      categoriaId,
-      projetoId,
-    );
+    const historico = await documentoController.obterHistoricoDeVersoes(documentoId);
 
     res.status(200).json(historico);
   },
 );
 
 router.get(
-  '/projeto/:projetoId/categoria/:categoriaId/documento/:documentoId/historico/:versaoId',
+  '/documento/versao/:documentoVersaoId',
   validarToken,
-  validarAcessoPorProjetoId,
+  validarAcessoPorDocumentoVersaoId,
   async (req, res) => {
-    const { categoriaId, documentoId, projetoId, versaoId } = req.params;
+    const { documentoVersaoId } = req.params;
 
-    const documento = await documentoController.obterVersaoPorId(
-      versaoId,
-      documentoId,
-      categoriaId,
-      projetoId,
-    );
+    const documento = await documentoController.obterVersaoPorId(documentoVersaoId);
 
     res.status(200).json(documento);
   },
